# tao_toolkit_recipes

./: LICENSE  README.md
tao_action_recognition/data_generation/: README.md  convert_dataset.py  convert_of.py  generate_new_dataset_format.py  load_tracks.py  preprocess_HMDB.sh  preprocess_HMDB_RGB.sh  preprocess_SHAD.sh  preprocess_SHAD_RGB.sh  save_tracks_shad.py  split_dataset.py
tao_action_recognition/data_generation/jetson_of/vpi/: CMakeLists.txt  main.cpp
tao_action_recognition/doc/: load_I3D.md
tao_action_recognition/specs/: i3d_rgb_3d_64_export.yaml  train_rgb_3d_64_i3d.yaml
tao_action_recognition/tensorrt_inference/: README.md  ar_of_trt_inference.py  ar_trt_inference.py
tao_action_recognition/tensorrt_inference/trt_inference/: __init__.py  engine.py
tao_api/: how_to_modify_code_for_TAO_API.md
tao_classification/deploy_to_deepstream/: README.md
tao_classification/mobilenet_v2/: mobilenetv2_imagenet2012.txt
tao_forum_faq/: FAQ.md
tao_fpenet_generic/tensorrt_inference/: README.md  fpenet_trt_inference.py
tao_key_points_estimation/tensorrt_inference/: README.md
tao_key_points_estimation/tensorrt_inference/trt_inference/: __init__.py  engine.py
tao_object_dection/yolov4/: README.md
tao_object_dection/yolov4/specs/: classification_cspdarknet53.txt  yolov4_416_coco14.txt
tao_ocdr/handwritten/: ocdr_handwritten.ipynb  preprocess_data.py
tao_ocdr/handwritten/ocdnet/: Iam_ocdnet.ipynb
tao_ocdr/handwritten/ocrnet/: ocrnet.ipynb  preprocess_data.py
tao_ocdr/handwritten/specs/ocd/: evaluate.yaml  export.yaml  inference.yaml  train.yaml
tao_pointpillars/tensorrt_sample/: README.md
tao_pointpillars/tensorrt_sample/include/: pointpillar.h  postprocess.h
tao_pointpillars/tensorrt_sample/src/: pointpillar.cpp  postprocess.cpp
tao_pointpillars/tensorrt_sample/test/: CMakeLists.txt  main.cpp
tao_retinanet/: README.md  tao_retinanet_scales_aspect_ratio_estimate.py
tao_training_without_network/: Guide  Guide.md
